[package]
name = "founder"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a font toolbox."
documentation = "https://docs.rs/founder"
homepage = "https://github.com/bodoni/founder"
repository = "https://github.com/bodoni/founder"
