[package]
name = "founder"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a font toolbox."
documentation = "https://docs.rs/founder"
homepage = "https://github.com/bodoni/workbench/tree/main/founder"
repository = "https://github.com/bodoni/workbench/tree/main/founder"
exclude = ["tests/fixtures/*"]

[features]
bin = ["arguments"]
rasterize = ["bin", "resvg"]
vectorize = ["bin", "svg"]
name = ["bin"]

[[bin]]
name = "founder"
path = "src/bin/main.rs"

[[bin]]
name = "founder-rasterize"
path = "src/bin/rasterize.rs"
required-features = ["rasterize"]

[[bin]]
name = "founder-vectorize"
path = "src/bin/vectorize.rs"
required-features = ["vectorize"]

[[bin]]
name = "founder-name"
path = "src/bin/name.rs"
required-features = ["name"]

[dependencies]
colored = "2"
folder = "0.5"
font = "0.24"

arguments = { version = "0.7", optional = true }
resvg = { version = "0.28", default-features = false, optional = true }
svg = { version = "0.13", optional = true }
