[package]
name = "founder"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a font toolbox."
documentation = "https://docs.rs/founder"
homepage = "https://github.com/bodoni/workbench/tree/main/founder"
repository = "https://github.com/bodoni/workbench/tree/main/founder"
exclude = ["tests/fixtures/*"]

[features]
default = ["bin"]
bin = ["arguments", "colored", "resvg"]

[[bin]]
name = "founder"
path = "src/bin/main.rs"

[[bin]]
name = "founder-rasterize"
path = "src/bin/rasterize.rs"
required-features = ["bin"]

[[bin]]
name = "founder-vectorize"
path = "src/bin/vectorize.rs"
required-features = ["bin"]

[[bin]]
name = "founder-name"
path = "src/bin/name.rs"
required-features = ["bin"]

[dependencies]
folder = "0.5"
font = "0.24"
svg = "0.13"

arguments = { version = "0.7", optional = true }
colored = { version = "2", optional = true }
resvg = { version = "0.28", default-features = false, optional = true }
