[package]
name = "workbench"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]

[[bin]]
name = "draw"
path = "src/draw.rs"
required-features = ["drawing"]

[[bin]]
name = "scan"
path = "src/scan.rs"
required-features = ["scanning"]

[[bin]]
name = "sign"
path = "src/sign.rs"
required-features = ["drawing", "scanning"]

[features]
drawing = ["svg"]
scanning = ["walkdir"]

[dependencies]
font = { path = "../font" }
opentype = { path = "../opentype" }
postscript = { path = "../postscript" }
truetype = { path = "../truetype" }
typeface = { path = "../typeface" }

arguments = "0.7"
svg = { version = "0.9", optional = true }
walkdir = { version = "2.3", optional = true }
